# rl_sutton_barto_2e

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yml  pyproject.toml  readme.md  todo.md
.github/: dependabot.yml
.github/workflows/: build_env_run_tests.yml  codeql-analysis.yml
ch1/: ch1.ipynb
ch1/.ipynb_checkpoints/: ch1-checkpoint.ipynb
ch2/: bandits.py
ch2/.ipynb_checkpoints/: ch2-checkpoint.ipynb
rl2e/: __init__.py
rl2e/ch1/: __init__.py  ch1.ipynb
rl2e/ch2/: __init__.py  bandits.py  ch2.ipynb
rl2e/ch3/: ch3.ipynb
rl2e/ch4/: __init__.py  ch4.ipynb  dp.py
rl2e/ch5/: __init__.py  ch5.ipynb  mc.py
tests/: __init__.py
tests/ch2/: __init__.py  bandits.py  test_bandits.py
